2005-10-12  Vincent Noel  <vnoel@cox.net>

	* logview.c: (logview_save_prefs), (logview_add_log),
	(logview_add_log_from_name), (logview_add_logs_from_names),
	(logview_remove_log), (logview_create_window),
	(loglist_unbold_log), (loglist_remove_selected_log),
	(logview_version_selector_changed): Add a bunch of asserts. Don't
	crash please.

2005-10-12  Vincent Noel  <vnoel@cox.net>

	* monitor.c (monitor_stop, monitor_start): Small cleanups.

2005-10-12  Vincent Noel  <vnoel@cox.net>

	* logview.c (loglist_unbold_log): Only unbold when the log is displayed.

2005-10-12  Vincent Noel  <vnoel@cox.net>

	* logview.c: (logname_remove_markup), (loglist_unbold_log),
	(loglist_selection_changed), (loglist_find_logname),
	(loglist_bold_log):
	* monitor.c: (monitor_callback): When new lines are added to a
	log, bold its name in the list. When the log is displayed, unbold
	its name after 5 seconds.

2005-10-11  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (handle_selection_changed_cb): Miserable
	workarounds for bug #318609.

2005-10-11  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (logview_draw_log_lines): Avoid massive slowdown
	when the log doesn't have dates.

2005-10-11  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_add_logs_from_names): Show a progress bar
	when loading logs at startup.

2005-10-11  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_add_logs_from_names): Try to open the main
	window as soon as possible.

2005-10-11  Vincent Noel  <vnoel@cox.net>

	* info.c (RepaintLogInfo): Make sure the number of lines displayed
	in the properties window is the same in the status bar.

2005-10-11  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (logview_draw_log_lines): Make sure things still
	work when a line is collapsed.

2005-10-11  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (logview_draw_log_lines): Try to avoid flicker as
	much as possible when switching logs.

2005-10-11  Vincent Noel  <vnoel@cox.net>
