@@ -1,5 +1,12 @@
 2005-10-12  Vincent Noel  <vnoel@cox.net>
 
+	* log_repaint.c: (row_toggled_cb), (log_repaint):
+	* log_repaint.h:
+	* logview.c: (loglist_selection_changed), (CreateMainWin):
+	Fixes and speedups.
+
+2005-10-12  Vincent Noel  <vnoel@cox.net>
+
 	* logview.c: (logview_save_prefs), (logview_add_log),
 	(logview_add_log_from_name), (logview_add_logs_from_names),
 	(logview_remove_log), (logview_create_window),
